Fix photo on mobile

--- a/sass/components/_images.scss
+++ b/sass/components/_images.scss
@@ -88,7 +88,6 @@ img {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 30; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -97,40 +96,42 @@ img {
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
 
-  /* Modal Content (Image) */
-  .modal-content {
-    margin: auto;
-    display: block;
+  .modal-content-div {
+    height: 100%;
     width: 100%;
-    max-width: 100%;
-    max-height: 100%;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto min-content;
 
-    @media (min-width: $min-width) {
-      width: 80%;
+    .modal-content-center {
+      min-height: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-  }
 
-  /* Caption of Modal Image (Image Text) - Same Width as the Image */
-  #caption {
-    margin: auto;
-    display: block;
-    width: 100%;
-    max-width: 700px;
-    text-align: center;
-    color: #ccc;
-    padding: 10px 0;
-    height: 150px;
-    
-    @media (min-width: $min-width) {
-      width: 80%;
+    /* Modal Content (Image) */
+    .modal-content {
+      object-fit: contain;
+      width: 100%;
+      max-width: 100%;
+      max-height: 100%;
     }
-  }
+    /* Caption of Modal Image (Image Text) - Same Width as the Image */
+    #caption {
+      min-height: 0;
+      text-align: center;
+      color: #ccc;
+      margin: auto 0;
+      padding: 5px 0;
+    }
 
-  /* Add Animation - Zoom in the Modal */
-  .modal-content,
-  #caption {
-    animation-name: zoom;
-    animation-duration: 0.6s;
+    /* Add Animation - Zoom in the Modal */
+    .modal-content,
+    #caption {
+      animation-name: zoom;
+      animation-duration: 0.6s;
+    }
   }
 }
 
